apps/home/glance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: glance
spec: {}
status: {}
