apps/home/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: glance
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: glance
    spec:
      containers:
        - image: glanceapp/glance
          name: glance
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: glance-config-dir
              mountPath: /app/config
            - name: glance-configmap
              mountPath: /app/config/glance.yml
              subPath: glance.yml
      volumes:
        - name: glance-config-dir
          persistentVolumeClaim:
            claimName: glance-config
