apps/home/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: glance
  name: glance
  namespace: glance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: glance
  type: ClusterIP
