apps/home/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    spec.ingressClassName: traefik

spec:
  rules:
    - host: glance.home.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: glance-tailscale
#   namespace: glance
# spec:
#   tls:
#     - hosts:
#         - glance.deer-truck.ts.net
#   ingressClassName: tailscale
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: glance
#                 port:
#                   number: 8080
